# basketball_analysis

./: .dockerignore  .env.example  .gitattributes  .gitignore  ANALYSIS_BEHAVIOR.md  Caddyfile  GUIA_MODELOS_Y_VIDEOS.md  MODEL_VERSIONS.md  README.md  SAM_TRACKING.md  docker-compose.yml  pytest.ini
api/: Dockerfile  (+3 more)
basketball_analysis/: main.py  pyproject.toml  requirements.txt
basketball_analysis/audio/: __init__.py  excitement.py
basketball_analysis/ball_aquisition/: ball_aquisition_detector.py
basketball_analysis/ball_sam2/: __init__.py  export_dataset.py  sam2_ball_tracker.py
basketball_analysis/configs/: __init__.py  configs.py  settings.py
basketball_analysis/court_keypoint_detector/: court_keypoint_detector.py
basketball_analysis/documentation/: transcript_1to4.txt  transcript_1to7.txt
basketball_analysis/drawers/: __init__.py  ball_tracks_drawer.py  court_key_points_drawer.py  frame_number_drawer.py  pass_and_interceptions_drawer.py  player_tracks_drawer.py  pose_drawer.py  speed_and_distance_drawer.py  tactical_view_drawer.py  team_ball_control_drawer.py  utils.py
basketball_analysis/dual_resolution/: __init__.py  dual_resolution_pipeline.py
basketball_analysis/event_detector/: __init__.py  rebound_detector.py  shot_detector.py  steal_turnover_detector.py
basketball_analysis/highlight_generator/: __init__.py  highlight_generator.py
basketball_analysis/hoop_detector/: __init__.py  hoop_detector.py
basketball_analysis/jersey_ocr/: __init__.py  ocr.py
basketball_analysis/pass_and_interception_detector/: pass_and_interception_detector.py
(+597 files in other folders)
